src/assets/scss/02_molecule/_header.scss
.m-header {
    @include clearfix();
    position: fixed;
    top: 0;
    width: 100%;
    top: 0;
    padding: 10px 0;
    z-index: 8;

    @include breakpoints("tablet") {
        top: 50px;
        padding: 0;
        background: transparent;
        overflow: hidden;
    }

    .o-rhythm__container.-fluid {
        padding: 0;
    }

    &__background {
        position: absolute;
        left: 0;
        right: 0;
        width: 100%;
        top: 0;
        bottom: 0;
        background: get-color-primary("white");
        box-shadow: 0 5px 10px 0 rgba(get-color-primary("black"), .2);

        @include breakpoints("tablet") {
            display: none;
        }
    }

    &__logo {
        display: block;
        float: left;
        width: 50px;
        perspective: 200px;
        transition: opacity .4s cubic-bezier(.165,.84,.44,1);
        -webkit-transform: translateZ(0);
        transform: translateZ(0);

        @include breakpoints("tablet") {
            width: 60px;
        }

        svg {

            path {
                fill: get-color("primary", "fresh");
            }
        }
    }

    &__title {
        position: fixed;
        left: calc(3% + 50px);
        top: 28px;
        z-index: 10;

        &.-home {
            .m-header__page-title {
                display: none;
            }
        }

        &:not(.-home) {
            svg {
                display: block;

                @include breakpoints("tablet") {
                    display: none;
                }
            }

            .m-header__page-title {
                display: none;

                @include breakpoints("tablet") {
                    display: block;
                }
            }
        }

        @include breakpoints("tablet") {
            position: absolute;
            display: block;
            left: calc(3% + 70px);
            top: 66px;
        }

        svg {
            width: 120px;

            @include breakpoints("tablet") {
                width: 192px;
            }

            path,
            rect {
                fill: get-color("primary", "fresh");
            }
        }
    }

    &__navigation {
        float: right;
        margin-top: 20px;

        button {
            border: none;
            padding: 0;
            background-color: transparent;
            -webkit-appearance: none;
            cursor: pointer;

            svg rect {
                @include font-size(32px);
                fill: get-color-primary("fresh");
            }
        }
    }

    &__page-title {
        @include font-size(16px);
        color: get-color("neutral", "light-gray");
        float: left;
        letter-spacing: 0.2em;
        font-weight: 500;
        font-family: $font-secondary;
        margin-top: 2px;
        margin-left: 8px;
        text-transform: uppercase;

        @include breakpoints("tablet") {
            @include font-size(20px);
            margin-left: auto;
            margin-top: 6px;
        }
    }

    a {
        @include font-size(20px);
        color: get-color("primary", "fresh");
        font-family: $font-primary;
        position: relative;
        font-weight: 500;
        transition: all .5s ease;

        @include breakpoints("tablet") {
            @include font-size(24px);

            &:hover {
                color: #19a87c;

                span:before,
                span:after {
                    opacity: 1;
                }
                span:before {
                    top: -5px;
                    transform: rotate(45deg);
                }
                span:after {
                    bottom: -5px;
                    transform: rotate(-45deg);
                }
            }
        }

        span,
        span:before,
        span:after {
            height: 2px;
            background: #19a87c;
            display: block;
            position: absolute;
        }

        span {
            top: 17px;
            width: 30px;
            left: -40px;
            display: none;

            @include breakpoints("tablet") {
                display: inline;
            }
        }

        span:before,
        span:after {
            content:'';
            opacity: 0;
            right: -2px;
            width: 15px;
            transition: all .5s ease;
        }

        span:before {
            top: 0;
        }
        span:after {
            bottom: 0;
        }
    }
}

